New editor integration, new URL.

--- a/Matrix.html
+++ b/Matrix.html
@@ -13,8 +13,8 @@
 			quantum simulator, quantum computer simulator, 
 			qubit, qbit, gate, Hadamard, Bloch, Bloch Sphere,
 			Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS,
-			Chrome, Firefox, Safari, Opera, Brave, Edge, WebKit, Blink,
-			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
+			Chrome, Firefox, Safari, Opera, Brave, Edge, WebKit, Blink, Gecko, Mozilla,
+			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stewartsmith, stew_rtsmith, @stew_rtsmith,
 			Moar, Moar Technologies Corp, MTC,
 			Google, IBM, Microsoft, Amazon, NASA, DWave, D-Wave,
 			Quil, OpenQASM,
@@ -28,29 +28,30 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ Matrix">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/other/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ Matrix">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
-		<meta property="og:url"           content="https://stewdio.github.io/q.js/Matrix.html">
+		<meta property="og:image"         content="https://quantumjavascript.app/other/q-thumbnail.png">
+		<meta property="og:url"           content="https://quantumjavascript.app/Matrix.html">
 		
-		<link rel="canonical" href="https://stewdio.github.io/q.js/Matrix.html">
+		<link rel="canonical" href="https://quantumjavascript.app/Matrix.html">
 		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
 		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" type="text/css" href="source/Q.css">
-		<link rel="stylesheet" type="text/css" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" type="text/css" href="other/documentation.css">
+		<link rel="stylesheet" href="source/Q.css">
+		<link rel="stylesheet" href="source/Q-Circuit-Editor.css">
+		<link rel="stylesheet" href="other/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<script src="other/ga.js"></script>				
+		<script src="other/ga.js"></script>
 		<script src="source/Q.js"></script>
 		<script src="source/Q-ComplexNumber.js"></script>
 		<script src="source/Q-Matrix.js"></script>
 		<script src="source/Q-Qubit.js"></script>
 		<script src="source/Q-Gate.js"></script>
+		<script src="source/Q-History.js"></script>
 		<script src="source/Q-Circuit.js"></script>
 		<script src="source/Q-Circuit-Editor.js"></script>
 		<script src="other/navigation.js"></script>
