Subdued color for now.

--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
 				<a href="https://en.wikipedia.org/wiki/Bell_state" target="_blank">Bell state</a>.
 				Tap and drag the pieces around to get a feel for the Q editor.
 				It’s okay to make mistakes.
-				<span class="coming-soon">
-					Support for dragging multi-register gates 
-					(and more!) coming in May 2020. 
-					Stay tuned.
-				</span>
+				<!-- <span class="coming-soon"> -->
+					(Support for dragging multi-register gates—and more!—coming in May 2020. 
+					Stay tuned.)
+				<!-- </span> -->
 			</p>
 			<br>
 			<div class="Q-circuit-palette"></div>
