Index and README updates.

--- a/index.html
+++ b/index.html
@@ -61,16 +61,21 @@
 		<main>
 			<h3>Quantum, made easy</h3>
 			<p>
-				Q is a quantum circuit editor and simulator that runs right in your Web browser.
-				There is nothing to install and nothing to configure.
-				Just by loading this website you have already loaded Q’s entire sweet of quantum tools.
-				In fact, here’s your first quantum circuit—a 
+				Q is a quantum circuit editor and simulator 
+				that runs right here in your web browser.
+				There’s nothing to install and nothing to configure, 
+				so jump right in and experiment!
+				Here’s your first quantum circuit—a 
 				<a href="https://en.wikipedia.org/wiki/Bell_state" target="_blank">Bell state</a>.
 				Tap and drag the pieces around to get a feel for the Q editor.
-				It’s okay to make mistakes.
+				Made a mistake? Just tap the Undo button.
+				Learn all about circuit editing, importing, exporting, and more 
+				on Q’s <a href="playground.html">Playground</a> page.
 				<!-- <span class="coming-soon"> -->
-					(Support for dragging multi-register gates—and more!—coming in May 2020. 
-					Stay tuned.)
+					(Support for dragging multi-register gates
+					and other interface updates
+					are landing in May 2020. 
+					Stay tuned!)
 				<!-- </span> -->
 			</p>
 			<br>
